<resources>
    <string name="app_name">InstagramApp</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sing_up">Sing Up</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="todo">TODO</string>
    <string name="caption">Caption</string>
    <string name="take_picture">TAKE PICTURE</string>
    <string name="post">POST</string>
    <string name="logout">LOGOUT</string>
    <string name="profile">Profile</string>
    <string name="compose">Compose</string>
    <string name="home">Home</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>