<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ComposeFragment">

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="67dp"
        android:visibility="invisible" />

    <RelativeLayout
        android:id="@+id/rlTakepost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pbLoading"
        android:layout_marginTop="50dp"
        android:visibility="invisible">

        <ImageView
            android:id="@+id/ivPostimage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/todo"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@tools:sample/avatars" />

        <EditText
            android:id="@+id/etCapture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivPostimage"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/caption"
            android:inputType="textPersonName"
            android:minHeight="48dp" />
    </RelativeLayout>


    <Button
        android:id="@+id/btTakepicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlTakepost"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/take_picture" />

    <Button
        android:id="@+id/btPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlTakepost"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/post"
        android:visibility="invisible" />

</RelativeLayout>