<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PostActivity">

    <include

        android:id="@+id/toolbar_menutop"
        layout="@layout/toolbar_menutop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_menutop"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="67dp"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/ivPostimage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/toolbar_menutop"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/todo"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/etCapture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivPostimage"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/caption"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btTakepicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etCapture"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/take_picture" />

    <Button
        android:id="@+id/btPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etCapture"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/post"
        android:visibility="invisible" />

    <ImageButton
        android:id="@+id/ibHome"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="start"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@mipmap/instagram_home_outline_24"
        tools:ignore="DuplicateSpeakableTextCheck"
        android:background="?android:selectableItemBackground"/>

    <ImageButton
        android:id="@+id/ibPost"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@mipmap/instagram_new_post_filled_24"
        android:background="?android:selectableItemBackground"/>

    <ImageButton
        android:id="@+id/ibUser"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="end"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@mipmap/instagram_user_outline_24"
        android:background="?android:selectableItemBackground"/>

</RelativeLayout>